[gd_scene load_steps=14 format=3 uid="uid://c6w1k5raxa556"]

[ext_resource type="Script" path="res://entities/towers/penguins/snowballer.gd" id="1_u1vc3"]
[ext_resource type="Texture2D" uid="uid://c2m8dbw2kae7w" path="res://assets/towers/64x64_triangle_white.png" id="2_5v254"]
[ext_resource type="Texture2D" uid="uid://obhi2r8e71sk" path="res://assets/towers/64x64_triangle_red.png" id="3_ndfvc"]
[ext_resource type="Script" path="res://components/aim_component.gd" id="3_wipvo"]
[ext_resource type="PackedScene" uid="uid://gk1h0f4x6sv7" path="res://components/attack_component.tscn" id="4_iuv7t"]
[ext_resource type="PackedScene" uid="uid://boec0e7ocyg1x" path="res://components/hitbox_component.tscn" id="5_gja0m"]
[ext_resource type="PackedScene" uid="uid://b4ijbbecw3f1s" path="res://entities/projectiles/snowball.tscn" id="6_oaeff"]
[ext_resource type="PackedScene" uid="uid://dfoiwki34li5c" path="res://components/range_component.tscn" id="6_q7rkx"]
[ext_resource type="Script" path="res://components/targeting_component.gd" id="7_8u5s4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cawe3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5v254")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ndfvc")
}, {
"duration": 1.0,
"texture": ExtResource("3_ndfvc")
}, {
"duration": 1.0,
"texture": ExtResource("3_ndfvc")
}, {
"duration": 1.0,
"texture": ExtResource("3_ndfvc")
}, {
"duration": 1.0,
"texture": ExtResource("3_ndfvc")
}, {
"duration": 1.0,
"texture": ExtResource("3_ndfvc")
}],
"loop": false,
"name": &"throw",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1q27x"]
radius = 33.0

[sub_resource type="CircleShape2D" id="CircleShape2D_64kx8"]
radius = 33.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fbopt"]
radius = 250.0

[node name="Snowballer" type="StaticBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_u1vc3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_cawe3")
animation = &"idle"
autoplay = "idle"

[node name="Muzzle" type="Marker2D" parent="AnimatedSprite2D"]
position = Vector2(32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1q27x")

[node name="AimComponent" type="RayCast2D" parent="." node_paths=PackedStringArray("targeting_component")]
target_position = Vector2(270, 0)
script = ExtResource("3_wipvo")
rotation_speed = 100.0
targeting_component = NodePath("../TargetingComponent")

[node name="AttackComponent" parent="." node_paths=PackedStringArray("attacker", "animated_sprite", "aim_component") instance=ExtResource("4_iuv7t")]
attacker = NodePath("..")
attack_type = ExtResource("6_oaeff")
projectile_scale = 0.1
animated_sprite = NodePath("../AnimatedSprite2D")
aim_component = NodePath("../AimComponent")

[node name="RateOfFireTimer" parent="AttackComponent" index="2"]
wait_time = 0.01

[node name="HitboxComponent" parent="." instance=ExtResource("5_gja0m")]
collision_layer = 2
collision_mask = 2

[node name="Hitbox" parent="HitboxComponent" index="0"]
shape = SubResource("CircleShape2D_64kx8")

[node name="RangeComponent" parent="." instance=ExtResource("6_q7rkx")]
collision_mask = 1

[node name="DetectionRange" parent="RangeComponent" index="0"]
shape = SubResource("CircleShape2D_fbopt")

[node name="TargetingComponent" type="Node2D" parent="." node_paths=PackedStringArray("range_component")]
script = ExtResource("7_8u5s4")
range_component = NodePath("../RangeComponent")

[connection signal="animation_finished" from="AnimatedSprite2D" to="AttackComponent" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="attacking" from="AttackComponent" to="." method="_on_attack_component_attacking"]

[editable path="AttackComponent"]
[editable path="HitboxComponent"]
[editable path="RangeComponent"]
